public/stylesheets/chaos.css
*{padding: 0; margin: 0;}

body {
	background-color: #222;
}
.panel {
	background-color: white;
}
#splash {
	width: 400px;
	margin: auto;
	margin-top: 20px;
	border: 2px solid grey;
	padding: 8px;
}
#splash h1 {
	line-height: 1.2em;
	margin-bottom: 0.4em;
	text-align: center;
}
#splash h2 {
	line-height: 1.2em;
	text-align: center;
	margin-bottom: 0.4em;
}

#games_list {
	list-style: none;
	margin: 0;
	padding: 0;
}
#games_list li {
	border: 1px solid silver;
	margin: 1px;
	padding-left: 4px;
	outline: 0;
	list-style: none;
	background-color: #ffffdd;
}
#games_list li .heading {
	line-height: 16pt;
	font-size: 12pt;
}
#games_list li .info {
	font-size: 8pt;
}

/* Game view */
#state_of_play {
	width: 528px;
	margin-left: 8px;
	float: left;
	height: 0;
	background-color: inherit;
}
#board {
	background-color: black;
	background-image: url(/images/board.png);
	width: 512px;
	height: 352px;
	position: relative;
}
	#board .sprite {
		position: absolute;
		width: 32px;
		height: 32px;
	}
	#board .sprite.highlight {
		background-color: #333333;
	}	
	#board .casting_position {
		position: absolute;
		width: 32px;
		height: 32px;
		background-color: #333333;
	}
	#board .casting_position:hover {
		background-color: #666666;
	}
	#board .move_position {
		position: absolute;
		width: 32px;
		height: 32px;
		background-color: #333333;
	}
	#board .move_position:hover {
		background-color: #666666;
	}

#sidebar {
	margin-left: 520px;
	background-color: inherit;
}

#title_panel {
	margin: 8px;
	padding: 8px;
	text-align: center;
	font-family: Palatino, Georgia, serif;
}
#title_panel h1 {
	font-family: Palatino, Georgia, serif;
}
#title_panel h2 {
	font-size: 12px;
}

#players_panel {
	margin: 8px;
	border: 1px solid goldenrod;
}
#players_panel h2 {
	text-align: center;
	font-family: Palatino, Georgia, serif;
	margin: 8px 0;
}
#players_panel #players_list {
	list-style: none;
	margin: 0;
	padding: 0;
}
#players_panel #players_list li {
	height: 32px;
	line-height: 32px;
	border: 1px solid silver;
	margin: 1px;
	outline: 0;
	list-style: none;
}
#players_panel #players_list li img.avatar {
	background-color: black;
	float: left;
	margin-right: 4px;
}
#players_panel #players_list li img.avatar.hover {
	background-color: #333333;
}
#players_panel #players_list li.awaiting_action img.avatar {
	background-image: url(/images/backgrounds/black_grey_throbber.gif);
	float: left;
	margin-right: 4px;
}
#players_panel #players_list li.me.awaiting_action {
	background-image: url(/images/backgrounds/red_white_throbber.gif);
}
#players_panel #players_list li .name {
	float: left;
}

#players_panel #players_list li.operator .name {
	padding-right: 22px;
	background-image: url(/images/icons/key.png);
	background-repeat: no-repeat;
	background-position: right center;
}

#players_panel #players_list li.me {
	background-color: salmon;
}
#players_panel #players_list li.me .name {
	font-weight: bold;
}
#players_panel #players_list li .actions {
	padding-right: 4px;
	float: right;
}

/* only show self_actions for .me */
#players_panel #players_list li .self_actions { display: none; }
#players_panel #players_list li.me .self_actions { display: block; }

#players_panel #players_list li.me .operator_actions {
	display: none; /* don't show operator actions for self */
}

#players_panel #players_list li .operator_actions a.deop_link {
	display: none; /* don't show deop link for ordinary users */
}
#players_panel #players_list li.operator .operator_actions a.deop_link {
	display: inline; /* show deop link for operators */
}
#players_panel #players_list li.operator .operator_actions a.op_link {
	display: none; /* don't show op link for operators */
}

#players_panel .join_game_form {
	margin: 12px;
}

#spells_panel {
	margin: 8px;
}
#spells_panel h2 {
	text-align: center;
	font-family: Palatino, Georgia, serif;
	padding: 8px 0;
}
#spells_panel ul#spells_list {
	width: 50%;
	float: left;
	margin: 0 8px 8px 8px;
	font-size: 9pt;
}
#spells_panel ul#spells_list li {
	text-align: center;
	list-style-type: none;
}
#spells_panel ul#spells_list li a.current {
	font-weight: bold;
}
#spells_panel ul#spells_list li .spell_info {
	display: none;
}

#spells_panel #next_spell {
	clear: both;
	text-align: center;
	padding: 4px 0;
	margin: 0 4px;
	border: 1px solid grey;
	background-color: #eeeeee;
	font-family: Palatino, Georgia, serif;
}

#events_panel {
	clear: both;
	width: 512px;
	margin-top: 8px;
	background-color: #eeeedd;
	height: 150px;
	overflow: auto;
}
#events_panel #events_list {
	margin: 4px;
}

